# algebratic-graph-rag

./: .gitignore  .pylintrc  ACADEMIC_EVALUATION_GUIDE.md  Dockerfile  PAPER_TEMPLATE.md  README.md  comprehensive_evaluation_report.json  docker-compose.yaml  pyproject.toml  run_evaluation.py  test_evaluator_consistency.py  test_multiple_runs.py
evaluation_results/evaluation_20250629_183857/: README.md  executive_summary.json  experiment_metadata.json
evaluation_results/evaluation_20250629_183857/processed_data/: detailed_results.csv
evaluation_results/evaluation_20250629_183857/raw_data/: comparison_1563.json  comparison_4412.json  comparison_5203.json  comparison_7060.json  comparison_7834.json
evaluation_results/evaluation_20250629_183857/statistical_analysis/: aggregate_statistics.json  statistical_tests.json
evaluation_results/evaluation_20250629_183857/tables/: latex_method_comparison.tex  method_comparison.csv  method_summary.csv
evaluation_results/evaluation_20250629_191644/: README.md  executive_summary.json  experiment_metadata.json
evaluation_results/evaluation_20250629_204240/: README.md  executive_summary.json  experiment_metadata.json
scripts/: evaluation_pipeline.py  graph_generator.py  graph_searcher.py  main.py  main_evaluation.py
scripts/agent/: __init__.py  base_agent.py  judge_agent.py  metric_agent.py  qa_agent.py
scripts/data/: artifical-intelligence.txt  attention-is-all-you-need.txt  computer-proggramming.txt  izmir-lezzet-rehberi.txt  izmir-wiki.txt  object-oriented-proggramming.txt  turkiye-wiki.txt
scripts/graphdb/: __init__.py  ne4oj_client.py
scripts/plugins/: graph_searcher.py
(+27 files in other folders)
