[project]
name = "algebratic-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "neo4j>=5.28.1",
    "nltk>=3.9.1",
    "openai>=1.82.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "typing-extensions>=4.0.0",
]
