[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algebratic-graph-rag"
version = "0.1.0"
description = "PageRank-based Hierarchical GraphRAG System with Academic Evaluation Framework"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "neo4j",
    "openai",
    "sentence-transformers",
    "networkx",
    "numpy",
    "scikit-learn",
    "pypdf",
    "pydantic",
    "typing-extensions",
    
    # Academic Evaluation Dependencies
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.9.0",
    "jupyter",
    
    # Optional visualization
    "plotly",
    "bokeh",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

evaluation = [
    "pandas>=1.5.0",
    "matplotlib>=3.5.0", 
    "seaborn>=0.11.0",
    "scipy>=1.9.0",
    "jupyter",
    "plotly",
    "bokeh",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
